@@ -6,4 +6,4 @@
 import pygtk
 pygtk.require('2.0')
 
-__version__ = "0.0.7.19"
+__version__ = "0.0.7.20"
